      invalid key types, to be TypeError in instead of KeyError. Updated the
      testcases accordingly.  (Andreas Maier)

    * Added checks for more than one argument and for unsupported argument
      types to the constructor of NocaseDict.  (Andreas Maier)

    * Fixed incorrectly labeled namespace variables in twisted client.
      (Robert Booth)

  TESTING:

    * Added support for running the unit test cases without having to be in the
      testsuite directory. This was done by setting up the DTD_FILE path
      correctly for any XML tests.  (Andreas Maier)

    * Improved the quality of assertion messages issued when testcases fail, to
      include context information and types.  (Andreas Maier)

    * Added docstrings to test cases.  (Andreas Maier)

    * Added testcases for CIMProperty.__init__() to be comprehensive.
      (Andreas Maier)

    * In XML validation tests, added the expected XML root element.
      (Andreas Maier)

    * Added a header to any error messages issued by xmllint.  (Andreas Maier)

    * Fix: Merged stderr into stdout for the xmllint invocation, xmllint error
      messages go to stderr and had been dropped before.  (Andreas Maier)

    * Fix: The "mkdir -p ..:" command in the comfychair testcase constructor
      created subdirectories named "-p" when running on Windows; replaced that
      command with os.makedirs().  (Andreas Maier)

    * Fix: Replaced the "rm -fr ..." command in the comfychair testcase
      constructor with shutil.rmtree(), in order to better run on Windows.
      (Andreas Maier)
  
    * Fix: In comfychair._enter_rundir(), moved registration of cleanup
      function _restore_directory() to the end, so cleanup happens only if no
      errors happened.  (Andreas Maier)

    * Fixed a bug in pywbem/trunk/testsuite/test_tupleparse.py in function
      ParseCIMProperty.runtest(), where the use of real tab characters caused
      a few lines to be incorrectly indented, and as a result, ignored for the